# OpenGLPractice

./: .gitignore  CMakeLists.txt  Makefile  buildProject.bat  buildProject_run.bat  temp.txt
include/: ShaderUtil.h  Trianle.h
include/glad/: glad.h
include/model/: Mesh.h  Model.h
include/myGL/: CameraHelper.h  CubeWithTexture.h  CustomModel.h  Grid.h  IControllable.h  InstanceScene.h  RetangleWithTexture.h  ShaderUtil.h  Shape.h  Trianle.h
include/opencv2/: cvconfig.h
shader/: grid_fragment.glsl  grid_vertex.glsl  model_fragment.glsl  model_vertex.glsl  planet_fragment.glsl  retangle_fragment.glsl  retangle_vertex.glsl  rock_vertex.glsl  triangle_fragment.glsl  triangle_vertex.glsl
src/: CVTest.cpp  CubeWithTexture.cpp  CustomModel.cpp  Grid.cpp  InstanceScene.cpp  RetangleWithTexture.cpp  Shape.cpp  Trianle.cpp  main.cpp
